<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <include layout="@layout/barra_navegacion"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="Menú principal"
            android:textColor="@color/btnColor"
            android:textSize="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.152" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="411dp"
            android:layout_height="53dp"

            android:background="@color/btnColor"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="61dp"
                android:layout_height="47dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/resource_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/seleccione_que_quiere_hacer_a_continuaci_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.286" />

        <Button
            android:id="@+id/btnlibros"
            style="@style/BlueButtonStyle"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="27dp"
            android:text="@string/ver_libros"
            app:layout_constraintBottom_toTopOf="@+id/btnfrecuentes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnagregarlibro" />

        <Button
            android:id="@+id/btnrespuestaenviar"
            style="@style/BlueButtonStyle"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="23dp"
            android:text="@string/enviar_respuestas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnfrecuentes" />

        <Button
            android:id="@+id/btnfrecuentes"
            style="@style/BlueButtonStyle"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="23dp"
            android:text="@string/mis_preguntas_frecuentes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlibros" />

        <Button
            android:id="@+id/btnagregarlibro"
            style="@style/BlueButtonStyle"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:text="@string/realizar_preguntas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.359" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>